# CPU-Simulator

./: ALUs.h  CDB.cpp  CDB.h  CMakeLists.txt  Decoder.h  Ins_Cache.cpp  Ins_Cache.h  LSB.cpp  LSB.h  Memory.h  Predictor.h  README.md  RF.cpp  RF.h  RS.cpp  RS.h  Rob.cpp  Rob.h  clock.cpp  clock.h  main.cpp  下发.lnk
下发/sample/: sample.data
下发/testcases/: array_test1.data  expr.data
